# pyls-zuru

./: .gitignore  README.md  pyproject.toml
pyls/: __main__.py  core.py  helper.py
tests/: mock_structure.json  test_pyls.py
