[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "0.1.0"
description = "A Python-based file listing system"
authors = [
    { name = "Sanjib Shaw", email = "sanjibansh2012@yahoo.com" },
]
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
pyls = "pyls.__main__:main"
